<resources>
    <string name="app_name">My Application2</string>

    <string name="name_input">Nombre</string>
    <string name="description_input">Descripción</string>
    <string name="add_btn">Agregar</string>
    <string name="next_btn">Siguiente</string>
    <string name="save_btn">Guardar</string>
    <string name="search_btn">Buscar</string>
    <string name="back_btn">Anterior</string>
    <string name="rut_input">Rut</string>
    <string name="age_input">Edad</string>
    <string name="console_list">Listado de Consolas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>