<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">


    <EditText
        android:id="@+id/rut_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/rut_input"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_input_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/name_input"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/rut_input"
        app:layout_constraintStart_toStartOf="@+id/rut_input"
        app:layout_constraintTop_toBottomOf="@+id/rut_input" />

    <EditText
        android:id="@+id/age_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/age_input"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/name_input_2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/name_input_2"
        app:layout_constraintTop_toBottomOf="@+id/name_input_2" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/save_btn"
        app:layout_constraintEnd_toEndOf="@+id/age_input"
        app:layout_constraintStart_toStartOf="@+id/age_input"
        app:layout_constraintTop_toBottomOf="@+id/age_input" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/search_btn"
        app:layout_constraintEnd_toEndOf="@+id/button_save"
        app:layout_constraintStart_toStartOf="@+id/button_save"
        app:layout_constraintTop_toBottomOf="@+id/button_save" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="toActivity1"
        android:text="@string/back_btn"
        app:layout_constraintEnd_toEndOf="@+id/button_search"
        app:layout_constraintStart_toStartOf="@+id/button_search"
        app:layout_constraintTop_toBottomOf="@+id/button_search" />

</androidx.constraintlayout.widget.ConstraintLayout>